--- a/src/pug/components/index.scss
+++ b/src/pug/components/index.scss
@@ -1,211 +1,2 @@
-$imgWidth: 288px;
-
-.nord-news {
-	padding-top: 50px;
-	padding-bottom: 80px;
-
-	@include point_screen(1200-1) {
-		padding-top: 40px;
-		padding-bottom: 60px;
-	}
-
-	@include point_screen(768-1) {
-		padding-left: 20px;
-		padding-right: 20px;
-	}
-
-	@include point_screen(688) {
-		padding: 20px;
-	}
-
-	&__item {
-		display: flex;
-		width: 100%;
-		height: fit-content;
-		flex-wrap: nowrap;
-		font-family: 'Roboto', sans-serif;
-		font-weight: 300;
-
-		align-items: center;
-
-		margin-bottom: 40px;
-
-		// &:nth-last-of-type(1){
-		// 	margin-bottom: 0;
-		// }
-
-		@include point_screen(1200-1) {}
-		@include point_screen(768-1) {
-			align-items: flex-start;
-		}
-		@include point_screen(688) {
-			flex-wrap: wrap;
-			margin-bottom: 20px;
-		}
-
-		&-img {
-			@include bg-img-center;
-			@include responsive-box(100% * 3/4);
-			width: $imgWidth;
-			height: 100%;
-
-			transition: all .5s;
-			&:hover {
-				opacity: .7;
-			}
-
-			@include point_screen(1200-1) {
-				width: 250px;
-				@include responsive-box(100% * 0.85);
-			}
-			@include point_screen(688) {
-				width: 100%;
-				@include responsive-box(100% * 0.55);
-
-				margin-bottom: 10px;
-			}
-		}
-
-		&-head {
-			display: flex;
-			flex-wrap: wrap;
-
-			a {
-				display: inline-block;
-				margin-bottom: rem(15px);
-				line-height: 1rem;
-				@include point_screen(688) {
-					margin-bottom: 10px;
-				}
-			}
-
-			@include point_screen(1200-1) {
-				flex-direction: column-reverse;
-
-				a {
-					margin-bottom: 1rem;
-				}
-			}
-		}
-
-		&-container {
-			display: inline-block;
-			width: calc(100% - #{$imgWidth});
-			padding-left: 33px;
-
-			@include point_screen(1200-1) {
-				width: calc(100% - 250px);
-				padding-left: 30px;
-			}
-			@include point_screen(688) {
-				width: 100%;
-				padding-left: 0;
-
-				padding-bottom: 30px;
-				border-bottom: 1px solid $border-base;
-			}
-		}
-
-		&-title {
-			display: inline;
-			color: #ec8b22;
-
-			font-size: rem(20px);
-			line-height: rem(30px);
-			// text-decoration: underline;
-			// text-decoration-color: rgba(236, 139, 34, 0.3);
-
-			background-size: 1px 1em;
-			box-shadow:
-				inset 0 -0.1em white,
-				inset 0 -0.125em rgba(236, 139, 34, 0.8);
-
-			// border-bottom: 1px solid rgba(236, 139, 34, 0.1);
-
-			transition: all .3s;
-			&:hover {
-				opacity: .8;
-				box-shadow:
-					inset 0 -0.1em white,
-					inset 0 -0.125em rgba(236, 139, 34, 0);
-			}
-
-			@include point_screen(1200-1) {
-				font-size: rem(16px);
-				color: rgb(94, 154, 189);
-				line-height: 1rem;
-
-				background-size: 1px 1em;
-				box-shadow:
-					inset 0 -0.1em white,
-					inset 0 -0.125em rgba(94, 154, 189, 0.8);
-
-				// transition: all .3s;
-				&:hover {
-					box-shadow:
-						inset 0 -0.1em white,
-						inset 0 -0.125em rgba(94, 154, 189, 0);
-				}
-			}
-		}
-
-		&-date {
-			width: 100%;
-			color: #96999a;
-			font-size: rem(13px);
-			line-height: rem(30px);
-			margin-bottom: rem(28px);
-
-			@include point_screen(1200-1) {
-				margin-bottom: 1rem;
-				line-height: 1rem;
-			}
-		}
-
-		&-text {
-			color: #232424;
-			font-size: rem(14px);
-			line-height: rem(25px);
-
-			@include point_screen(1200-1) {
-				line-height: 1.4rem;
-			}
-		}
-	}
-
-	&__btn {
-		cursor: pointer;
-
-		display: block;
-		width: fit-content;
-
-		padding: 15px 25px;
-		border-radius: 2px;
-		border: 1px solid #dee0e1;
-		background-color: #ffffff;
-
-		margin-left: auto;
-		margin-right: auto;
-
-		color: #000000;
-		font-size: rem(12px);
-		font-weight: 600;
-		line-height: rem(30px);
-
-		text-transform: uppercase;
-		letter-spacing: 0.6px;
-
-		transition: all .5s;
-		&:hover {
-			opacity: .9;
-			transform: scale(1.03);
-		}
-		&:active {
-			transform: scale(.95);
-		}
-
-		@include point_screen(1200-1) {
-			line-height: 1rem;
-		}
-	}
-}
+@import './news/news.scss';
+@import './search/search.scss';
