--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -150,9 +150,9 @@ ul, li {
 	// // max-width: 100%;
 	max-width: 1180px;
 	flex: 0 0 auto;
-	position: relative;
+	// position: relative;
 	margin: 0 auto;
-	
+
 	// padding: 0 20px;
 	// max-width: $desktopWidth;
 
