--- a/src/pug/components/news/news.scss
+++ b/src/pug/components/news/news.scss
@@ -190,7 +190,7 @@ $imgWidth: 288px;
 		color: #000000;
 		font-size: rem(12px);
 		font-weight: 600;
-		line-height: rem(30px);
+		line-height: 1;
 
 		text-transform: uppercase;
 		letter-spacing: 0.6px;
