--- a/src/pug/pages/search.pug
+++ b/src/pug/pages/search.pug
@@ -4,47 +4,54 @@ html(lang="ru")
 		meta(name="viewport", content="width=device-width, initial-scale=1.0")
 		meta(http-equiv="X-UA-Compatible", content="ie=edge")
 
-		title Новости
+		title Поиск
+
 	body
 		-
-			let news = [
+			let search = [
 				{
-					title:'Новые правила отправки груза',
-					text:'В компании «Норд Вил» введены новые правила оформления документов на отправку грузов. Для отправки груза отправитель должен предоставить информацию о себе, получателе и плательщике (в случае если плательщиком является третье лицо), а специалист компании обязан проверить достоверность представленных клиентом документов и сведений.',
+					title:'Снижены сроки перевозки в Архангельск',
+					text:'С 1 апреля компания​ снизила сроки <b>перевозки</b> из Москвы и Санкт-Петербурга в Архангельск. Логисты Компании постоянно работают над снижением сроков магистральной (межфилиальной) ...',
 				},
 				{
-					title:'Открыт новый склад в Санкт-Петербурге',
-					text:'Уважаемые клиенты, спешим Вам сообщить об открытии нового склада "Норд Вил" в Санкт-Петербурге! <br> г. Санкт-Петербург, ул. Предпортовая, д. 8 (территория ЗАО "ПОСЫЛТОРГ") склад №17 ООО "Норд Вил"',
+					title:'Перевозка сборного груза',
+					text:'... услуг – приоритетное направление работы «ПЭК». Транспортировка в составе сборных грузов дает возможность Компании сокращать расходы на перевозку, что создает выгодные условия и для клиентов. Компания «ПЭК» - один из крупнейших российских грузоперевозчиков, специализирующихся',
 				},
 				{
-					title:'Новая услуга! Доставка корреспонденции',
-					text:'В компании «Норд Вил» введены новые правила оформления документов на отправку грузов. Для отправки груза отправитель должен предоставить информацию о себе, получателе и плательщике (в случае если плательщиком является третье лицо), а специалист компании обязан проверить достоверность представленных клиентом документов и сведений.',
+					title:'Паллетная перевозка',
+					text:'Транспортные услуги обеспечивают удобство доставки грузов в гипермаркеты и торговые сети. Услуга «Паллетная <b>перевозка»</b> создана для доставки грузов в гипермаркеты и торговые сети. Главная особенность услуги — единый тариф на <b>перевозку</b> стандартной',
 				},
 				{
-					title:'Акция Осенний тест драйв! - 10% скидка на все грузоперевозки',
-					text:`Только для клиентов, заключивших договор с нашей компанией осенью, действует специальное предложение:<br>
-					10 % скидка на грузоперевозки<br>
-					Саратов - Москва / Москва - Саратов<br>
-					Саратов - Санкт-Петербург / Санкт-Петербург - Саратов`,
+					title:'Тарифы, графики и сроки',
+					text:`Транспортно-экспедиционные услуги по <b>перевозки</b> грузов внутри Казахстана, которые оказывает Компания ТОО «ПЭК Казахстан», включают в себя следующий комплекс работ: прием и оформление`,
 				},
 				{
-					title:'Теперь мы возим в Мурманск',
-					text:`Уважаемые клиенты!<br>
-					C 1 октября 2015 г, открывается новое направление грузоперевозок в город Мурманск, а также есть возможность доставлять груз от дверей до дверей клиента. Более подробную информацию уточняйте по телефону (812) 640-17-67, 8-921-956-17-67`,
+					title:'Снижены сроки перевозки в Архангельск',
+					text:`С 1 апреля компания​ снизила сроки <b>перевозки</b> из Москвы и Санкт-Петербурга в Архангельск. Логисты Компании постоянно работают над снижением сроков магистральной (межфилиальной) ...`,
+				},
+				{
+					title:'Перевозка сборного груза',
+					text:`... услуг – приоритетное направление работы «ПЭК». Транспортировка в составе сборных грузов дает возможность Компании сокращать расходы на <b>перевозку</b>, что создает выгодные условия и для клиентов. Компания «ПЭК» - один из крупнейших российских грузоперевозчиков, специализирующихся`,
+				},
+				{
+					title:'Паллетная перевозка',
+					text:`Транспортные услуги обеспечивают удобство доставки грузов в гипермаркеты и торговые сети. Услуга «Паллетная перевозка» создана для доставки грузов в гипермаркеты и торговые сети. Главная особенность услуги — единый тариф на <b>перевозку</b> стандартной`,
 				},
 			]
+
 		.container
-			.nord-news
-				.nord-news__wrapper
-					each item,i in news
-						.nord-news__item
-							a.nord-news__item-img(href="#", style=`background-image: url(/assets/img/content/news/news-${i+1}.jpg)`)
-							.nord-news__item-container
-								.nord-news__item-head
-									a(href="#")
-										.nord-news__item-title|!{item.title}
-									.nord-news__item-date|14.08.2017
-								.nord-news__item-text|!{item.text}
-				a.nord-news__btn|+ показать еще 20
+			.nord-search
+				.nord-search__search-container
+					input.nord-search__search(type="text", name="", placeholder="перевозки")
+					button.nord-search__search-btn| Искать
+					button.nord-search__search-btn--mob(style="background-image: url(/assets/img/ico/search-ico.png)")
+					.nord-search__search-info| Найдено <b>50</b> совпадений
+
+				.nord-search__wrapper
+					each item in search
+						.nord-search__item
+							a.nord-search__item-title(href="#")|!{item.title}
+							p.nord-search__item-text|!{item.text}
+				a.nord-search__btn|+ показать еще 20
 
 
