--- a/src/pug/components/search/search.scss
+++ b/src/pug/components/search/search.scss
@@ -1,3 +1,222 @@
 .nord-search {
-	
+	padding-top: 30px;
+	padding-bottom: 70px;
+
+	@include point_screen($m_table) {
+		padding-bottom: 60px;
+	}
+	@include point_screen(480) {
+		padding-top: 21px;
+		padding-bottom: 50px;
+	}
+
+	&__search-container {
+		position: relative;
+		display: flex;
+		flex-wrap: wrap;
+
+		width: 100%;
+	}
+
+	&__search {
+		position: relative;
+
+		height: 50px;
+		width: calc(100% - 160px);
+
+		padding: 0 24px;
+
+		font-size: 12px;
+		font-weight: 700;
+		line-height: 30px;
+		text-transform: uppercase;
+
+		border-radius: 3px;
+		border: 1px solid #d5d5d5;
+
+		border-top-right-radius: 0;
+		border-bottom-right-radius: 0;
+
+		// box-shadow: inset 0 1px 0 rgba(0,0,0,.1);
+		background: #f0f2f3;
+
+		@include point_screen(600) {
+			width: 100%;
+			// height: 40px;
+		}
+
+		&::placeholder {
+			color: #aab0b4;
+
+			font-size: 12px;
+			font-weight: 700;
+			line-height: 30px;
+			text-transform: uppercase;
+			letter-spacing: 0.6px;
+		}
+
+		&:focus {
+			outline: none;
+			border: 1px solid #ec8b22;
+			background-color: #fff;
+		}
+
+		&-btn {
+			height: 50px;
+			width: 160px;
+
+			outline: none;
+			text-align: center;
+
+			border-radius: 3px;
+			border: 1px solid #ec8b22;
+			font-size: 12px;
+			background: #ec8b22;
+			color: #fff;
+			font-weight: 700;
+			text-transform: uppercase;
+			outline: 0;
+			appearance: none;
+
+			@include point_screen(600) {
+				display: none;
+			}
+
+			transition: all .3s;
+			&:hover {
+				box-shadow: 0 5px 8px rgba(0,0,0,.09);
+				opacity: .95;
+			}
+
+			&:active {
+				transform: translateX(-2px);
+			}
+
+			&--mob{
+				display: none;
+
+				@include point_screen(600) {
+					@include size(25px);
+					@include bg-img-center;
+
+					position: absolute;
+					top: 12px;
+					right: 16px;
+
+					display: block;
+					outline: none;
+					appearance: none;
+					border:none;
+					background-color: transparent ;
+					padding: 0;
+				}
+
+				transition: all .3s;
+				&:active {
+					transform: scale(1.1);
+				}
+			}
+		}
+
+		&-info {
+			margin-top: 19px;
+
+			font-size: 14px;
+			font-weight: 500;
+			line-height: 30px;
+			letter-spacing: 0.7px;
+		}
+	}
+
+	&__wrapper {
+		margin-top: 42px;
+
+		@include point_screen(480) {
+			margin-top: 28px;
+		}
+	}
+
+	&__item {
+		margin-bottom: 38px;
+
+		@include point_screen(480) {
+			margin-bottom: 27px;
+		}
+
+		&-title {
+			color: #5e9abd;
+			font-size: 16px;
+			font-weight: 400;
+			// line-height: 30px;
+			line-height: 1;
+
+			background-size: 1px 1em;
+				box-shadow:
+					inset 0 -0.1em white,
+					inset 0 -0.125em rgba(94, 154, 189, 0.8);
+
+				transition: all .3s;
+
+			@include point_screen($m_table){
+				font-size: 14px;
+			}
+
+			&:hover {
+				opacity: .8;
+				box-shadow:
+					inset 0 -0.1em white,
+					inset 0 -0.125em rgba(94, 154, 189, 0);
+			}
+		}
+
+		&-text {
+			margin-top: 14px;
+			margin-bottom: 0;
+
+			color: #5d6062;
+			font-size: 16px;
+			font-weight: 300;
+			line-height: 25px;
+
+			@include point_screen($m_table){
+				font-size: 14px;
+			}
+		}
+	}
+
+	&__btn {
+		cursor: pointer;
+
+		display: block;
+		width: fit-content;
+
+		padding: 15px 25px;
+		border-radius: 2px;
+		border: 1px solid #dee0e1;
+		background-color: #ffffff;
+
+		margin-left: auto;
+		margin-right: auto;
+
+		color: #000000;
+		font-size: 12px;
+		font-weight: 600;
+		line-height: 1;
+
+		text-transform: uppercase;
+		letter-spacing: 0.6px;
+
+		transition: all .5s;
+		&:hover {
+			opacity: .9;
+			transform: scale(1.03);
+		}
+		&:active {
+			transform: scale(.95);
+		}
+
+		@include point_screen(1200-1) {
+			line-height: 1rem;
+		}
+	}
 }
