--- a/src/pug/components/search/search.scss
+++ b/src/pug/components/search/search.scss
@@ -14,6 +14,7 @@
 		position: relative;
 		display: flex;
 		flex-wrap: wrap;
+		// justify-content: space-between;
 
 		width: 100%;
 	}
@@ -22,7 +23,8 @@
 		position: relative;
 
 		height: 50px;
-		width: calc(100% - 160px);
+		// width: calc(100% - 160px);
+		width: calc(60% - 160px - 20px);
 
 		padding: 0 24px;
 
@@ -39,6 +41,10 @@
 
 		// box-shadow: inset 0 1px 0 rgba(0,0,0,.1);
 		background: #f0f2f3;
+
+		@include point_screen(1200 - 1) {
+			width: calc(100% - 160px);
+		}
 
 		@include point_screen(600) {
 			width: 100%;
@@ -119,6 +125,7 @@
 		}
 
 		&-info {
+			width: 100%;
 			margin-top: 19px;
 
 			font-size: 14px;
